fixed alignment

--- a/css/portal.css
+++ b/css/portal.css
@@ -13,7 +13,7 @@ header {
     margin: auto;
 }
 main {
-    padding: 30px 20em;
+    padding: 30px 15em;
     display: grid;
     grid-template-columns: 1fr 250px 1fr;
     font-family: 'Quicksand', sans-serif;
@@ -25,7 +25,6 @@ main img {
     width: 250px;
 }
 main p {
-    /* padding-top: 30px; */
     font-size: 1.2em;
     line-height: 2em;
 }
@@ -36,11 +35,12 @@ main p {
 .left {
     grid-column: 1/2;
     grid-row: 1/2;
-    /* padding-bottom: 25px; */
+    text-align: left;
 }
 .right {
     grid-column: 3/4;
     grid-row: 1/2;
+    text-align: right;
 }
 footer {
     background-color: #5462B6;
